    - Fixed /force-claim command not being able to claim liquid hexes.
    - Fixed dungeon looting quests being completed by picking up manually placed dungeon chests.
    - Fixed crash when opening trade overview while an equipment grid is open.
    - Fixed that the completion of a quest before its revelation was not revealing it.
    - Fixed that the ammo in dungeon turrets was not infinite.
  Changes:
    - JSON trades export now has a more consistent structure, where entries that were nonexistent are now entered as false.
    - Changed mod thumbnail from hexaprism coin to a hexagon.
  Optimizations:
    - Improved dungeon generation speed.
  Modding:
    - Flagged mod Resource Spawner Overhaul as incompatible, as it disrupts this mod's initialization.
      That mod's effects can be achieved with this mod's handling of map generation settings.
---------------------------------------------------------------------------------------------------
Version: 1.0.18
Date: 16/7/25
  Bugfixes:
    - Hotfix for trade export notification being formatted incorrectly.
---------------------------------------------------------------------------------------------------
Version: 1.0.17
Date: 16/7/25
  Minor Features:
    - Added ability to export all trades as JSON text from trade overview.
  Bugfixes:
    - Fixed that hex core spawning was deleting entities (such as ores) incorrectly.
---------------------------------------------------------------------------------------------------
Version: 1.0.16
Date: 12/7/25
  Bugfixes:
    - Fixed crash with mods that modify steel chests.
---------------------------------------------------------------------------------------------------
Version: 1.0.15
Date: 1/7/25
  Bugfixes:
    - Fixed that the trade overview showed trades from deleted hex cores. (a bug introduced in 0.4.0)
---------------------------------------------------------------------------------------------------
Version: 1.0.14
Date: 30/6/25
  Bugfixes: