@@ -24,6 +24,7 @@ Date: 22/8/25
     - Fixed crash when opening trade overview while an equipment grid is open.
     - Fixed that the completion of a quest before its revelation was not revealing it.
     - Fixed that the ammo in dungeon turrets was not infinite.
+    - Fixed that interplanetary trades were sometimes missing on some planets.
   Changes:
     - JSON trades export now has a more consistent structure, where entries that were nonexistent are now entered as false.
     - Changed mod thumbnail from hexaprism coin to a hexagon.
